--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 html {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    font-family: "Ubuntu", Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -19,15 +22,17 @@ body {
     justify-content: space-between;
     background-color: #1e90ff;
     width: 60%;
-    max-width: 700px;
-    height: 50%;
+    max-width: 800px;
+    height: 60%;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 5px 5px #c0c4c5;
+    /* box-shadow: 5px 5px #c0c4c5; */
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
 }
 
 .card-info {
     width: 35%;
+    max-width: 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -51,66 +56,103 @@ body {
     height: auto;
 }
 
+.contact-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 .list {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    min-width: 100%;
     height: 100%;
     overflow-y: scroll;
+    /* Gradient at bottom of list */
+    -webkit-mask-image: linear-gradient(180deg, #000 97%, transparent);
+    mask-image: linear-gradient(180deg, #000 97%, transparent);
+    /* Removing scrollbar */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
-
+/* Hide scrollbar for Chrome, Safari and Opera */
 .list::-webkit-scrollbar {
-    width: 8px;
-}
-  
-.list::-webkit-scrollbar-track {
-    background: transparent;
-}
-  
-.list::-webkit-scrollbar-thumb {
-    background-color: #ecf0f1;
-    border-radius: 20px;
+    display: none;
 }
 
 .list-card {
-    background-color: #f1f2f6;
+    background-color: #eeeff5;
     width: 90%;
-    height: 25%;
-    min-height: 90px;
+    /* height: 35%; */
+    /* min-height: 150px; */
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 10px;
 
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .list-img {
     border-radius: 10px;
+    max-width: 20%;
+    height: auto;
+
+    margin-top: 3px;
 }
 
 .list-card-content {
+    margin-top: 3px;
     margin-left: 10px;
 }
 
-.list-card-content > h3, p {
+.list-card-content > h3 {
     margin: 0;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .list-card-content > p {
+    margin: 0;
     margin-top: 5px;
 }
 
 .carousel {
     height: 92%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    gap: 10px;
+    overflow-x: hidden;
+}
+
+.carousel > * {
+    margin: 0;
 }
 
 .nav-btn {
-    width: 25%;
+    width: 33%;
     background-color: transparent;
     color: white;
     text-align: center;
-    font-size: 16px;
+    font-size: 21px;
+    font-weight: bolder;
     border: none;
+    text-decoration: none;
+}
+
+.nav-btn:hover {
+    font-size: 22px;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .nav-btn:not(:last-child) {
@@ -120,4 +162,47 @@ body {
 .profile-img {
     width: 100%;
     border-radius: 10px;
+}
+
+.name-title > h3 {
+    font-size: 30px;
+    /* font-size: 48px; */
+    font-weight: bolder;
+    color: white;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.name-title > h5 {
+    font-size: 18px;
+    color: white;
+    margin: 0;
+}
+
+.name-title > p {
+    color: white;
+    margin: 0;
+}
+
+.icon{
+    position: relative;
+    background-color: #ffffff;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    color: #333;
+    text-decoration: none;
+}
+
+.icon:hover {
+  background-color: #333333;
+  color: #ffffff;
 }
