--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
     padding: 10px;
     /* box-shadow: 5px 5px #c0c4c5; */
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
 }
 
 .card-info {
@@ -150,13 +151,13 @@ body {
 }
 
 .nav-btn:hover {
-    font-size: 22px;
+    /* font-size: 22px; */
     text-decoration: underline;
     cursor: pointer;
 }
 
 .nav-btn:not(:last-child) {
-    border-right: 1px solid #f1f2f6;
+    border-right: 2px dotted #f1f2f6;
 }
 
 .profile-img {
